2013-03-12  Pekka Enberg <penberg@kernel.org>

	* autogen.sh:
	Check that gettext.m4 is installed.

2013-03-09  Pekka Enberg <penberg@kernel.org>

	* .gitignore: Exclude autogen-generated files.

2013-03-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/classpath/Pair.java:
	(equals(Object)): Cast to Pair<?,?> not Pair<A,B>
	as we don't know that the objects held by the pair
	are of the same type.
	* gnu/classpath/ServiceProviderLoadingAction.java:
	(run()): Suppress warning as we check the loaded
	class is an instance of P.
	* gnu/classpath/jdwp/Jdwp.java:
	(_properties): Add type parameters.
	(notify(Event[])): Likewise.
	(_processConfigury(String)): Likewise.
	* gnu/classpath/jdwp/event/ClassPrepareEvent.java:
	(_class): Add type parameter.
	(ClassPrepareEvent(Thread,class,int)): Likewise.
	* gnu/classpath/jdwp/event/ClassUnloadEvent.java:
	(writeData(DataOutputStream)): Don't store result
	of getDefault() call as unused.  Retain for
	side-effects.
	* gnu/classpath/jdwp/event/EventManager.java:
	(_requests): Add type parameters.
	(EventManager()): Likewise & use Byte.valueOf
	rather than new.
	(getEventRequests(Event)): Likewise and remove
	unneeded cast.
	(requestEvent(EventRequest)): Add type parameters,
	remove unneeded cast and use Integer.valueOf
	rather than new.
	(deleteRequest(byte,int)): Add type parameters,
	use valueOf methods instead of constructors
	and drop unneeded cast.
	(clearRequests(byte)): Add type parameters
	and use Byte.valueOf.
	(getRequest(byte,int)): Likewise and drop
	unused cast and use Integer.valueOf.
	(getRequests(byte)): Add type parameters
	and use Byte.valueOf.
	* gnu/classpath/jdwp/event/EventRequest.java:
	(_filters): Add type parameter.
	(EventRequest(byte,byte)): Likewise.
	(EventRequest(int,byte,byte)): Likewise.
	(addFilter(IEventFilter)): Likewise.
	(getFilters()): Likewise.
	(matches(Event)): Likewise and remove unneeded
	cast.
	* gnu/classpath/jdwp/event/ExceptionEvent.java:
	(_klass): Add type parameter.